--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,40 +1,20 @@
 spring:
-  application:
-    name: kj-kanban
-  
-  datasource:
-    url: jdbc:h2:mem:kanbandb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: password
-  
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-  
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-  
-  sql:
-    init:
-      mode: never
-  
-  thymeleaf:
-    cache: false
-    prefix: classpath:/templates/
-    suffix: .html
+   application:
+      name: kj-kanban
+
+   data:
+      mongodb:
+         uri: mongodb://admin:password@localhost:27017/kanban?authSource=admin
+
+   thymeleaf:
+         cache: false
+         prefix: classpath:/templates/
+         suffix: .html
 
 server:
-  port: 8080
+   port: 8080
 
 logging:
-  level:
-    com.kanban: DEBUG
-    org.springframework.web: DEBUG
+   level:
+      '[com.kanban]': DEBUG
+      '[org.springframework.web]': DEBUG
