--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.5.4'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.kanban'
+group = 'dev.kreaker.kjk'
 version = '1.0.0'
 
 java {
@@ -49,5 +49,5 @@ tasks.withType(JavaCompile) {
 
 // Spring Boot plugin configuration
 springBoot {
-    mainClass = 'com.kanban.KanbanApplication'
+    mainClass = 'dev.kreaker.kjk.KjkApplication'
 }
